# Translations

./: .gitignore  README.md  __init__.py  _singleton.py  crowdin.yml  discord.en.yml  discord.es.yml  discord.it.yml  discord.no.yml  discord.ru.yml  example_images.en.yml  example_images.it.yml  exceptions.it.yml  global.en.yml  global.es.yml  global.fr.yml  global.it.yml  global.owo.yml  global.ru.yml  main.spec  permission.it.yml  pyproject.toml  raw.ru.yml  rest.es.yml  rest.fr.yml  rest.it.yml  rest.owo.yml  setup.py  test_translations.py
command_docs/: alias-delete.es.yml  alias-delete.hi.yml  alias-delete.owo.yml  alias-export.en.yml  alias-export.es.yml  alias-export.fr.yml  alias-export.hi.yml  alias-export.owo.yml  alias-export.ru.yml  alias-import.es.yml  alias-import.fr.yml  alias-import.owo.yml  alias-import.ru.yml  alias-list.es.yml  alias-list.fr.yml  alias-list.hi.yml  alias-list.owo.yml  alias-list.ru.yml  alias-rename.en.yml  alias-rename.hi.yml  alias-rename.ru.yml  alias-search.en.yml  alias-search.fr.yml  alias-search.hi.yml  alias-search.ru.yml  alias.en.yml  alias.hi.yml  alias.owo.yml  alias.ru.yml  audit.es.yml  audit.fr.yml  audit.owo.yml  edit.en.yml  edit.es.yml  edit.ru.yml  export.en.yml  export.hi.yml  export.ru.yml  help.en.yml  help.es.yml  (+222 more)
discord_bot/: audit_log.en.yml  audit_log.es.yml  audit_log.owo.yml  audit_log.ru.yml  rendered_message.owo.yml  rendered_message.ru.yml  search_tools.en.yml  search_tools.ru.yml
translation/: __init__.py  _create_owo.py  _ruamel_loader.py  discord.de.yml  discord.en.yml  discord.es.yml  discord.fr.yml  (+52 more)
(+1381 files in other folders)
